fluxcd/apps/overlays/production/netalertx/service-netalertx-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: netalertx
  labels:
    policy.prplanit.com/ingress: "true"
