fluxcd/apps/overlays/production/netalertx/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: netalertx
  annotations:
    lbipam.cilium.io/ips: "172.22.30.137"
    lbipam.cilium.io/sharing-key: "gossip-stone"
spec:
  type: LoadBalancer
  ports:
    - port: 20211
      targetPort: 20211
      protocol: TCP
      name: http
