fluxcd/apps/overlays/production/netalertx/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netalertx
spec:
  parentRefs:
    - name: xylem-gateway
      namespace: king-of-red-lions
  hostnames:
    - netalertx.pcfae.com
