fluxcd/apps/overlays/production/netalertx/httproute-xylem.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netalertx-xylem
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Privileged Telemetry (Lakitu☁️)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "hosts.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: netalertx
          port: 20211
